--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 	</button>
 </div>
 <p>I'm hosted with GitHub Pages.</p>
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe id="tour-iframe" src='https://showroom.littleworkshop.fr/' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>	
+<!-- <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe id="tour-iframe" src='https://playcanv.as/p/XqWsxWBt/' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>	 -->
+<object id="tour-iframe"
+    data="https://playcanv.as/p/XqWsxWBt/"
+    width="600"
+    height="400">
+</object>
 <script>
 	$('#fullscreen-button button').click(function () {
 		$('#tour-iframe').css('position', 'fixed');
