--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     height="400">
 </object>
 <script>
+	window.screen.lockOrientation('portrait');
 	$('#fullscreen-button button').click(function () {
 		$('#tour-iframe').css('position', 'fixed');
 	});
